[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Menu/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/BackButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/BackButtonHover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/LevelSelectTitle.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/LevelButton6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/LevelButton4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/LevelButton9.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/LevelButton3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/LevelButton1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/LevelButtonB1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu/LevelButton8.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/LevelButton2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/LevelButtonB2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu/LevelButton5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menu/LevelButton7.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menu/LevelButton10.png" type="Texture" id=17]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 320, 240 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -65.0
margin_right = 133.0
margin_bottom = 93.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L1Button" type="TextureButton" parent="GridContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L2Button" type="TextureButton" parent="GridContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
texture_normal = ExtResource( 13 )

[node name="L3Button" type="TextureButton" parent="GridContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
texture_normal = ExtResource( 9 )

[node name="L4Button" type="TextureButton" parent="GridContainer"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )

[node name="L5Button" type="TextureButton" parent="GridContainer"]
margin_left = 216.0
margin_right = 266.0
margin_bottom = 50.0
texture_normal = ExtResource( 15 )

[node name="L6Button" type="TextureButton" parent="GridContainer"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
texture_normal = ExtResource( 6 )

[node name="L7Button" type="TextureButton" parent="GridContainer"]
margin_left = 54.0
margin_top = 54.0
margin_right = 104.0
margin_bottom = 104.0
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L8Button" type="TextureButton" parent="GridContainer"]
margin_left = 108.0
margin_top = 54.0
margin_right = 158.0
margin_bottom = 104.0
texture_normal = ExtResource( 12 )

[node name="L9Button" type="TextureButton" parent="GridContainer"]
margin_left = 162.0
margin_top = 54.0
margin_right = 212.0
margin_bottom = 104.0
texture_normal = ExtResource( 8 )

[node name="L10Button" type="TextureButton" parent="GridContainer"]
margin_left = 216.0
margin_top = 54.0
margin_right = 266.0
margin_bottom = 104.0
texture_normal = ExtResource( 17 )

[node name="B1Button" type="TextureButton" parent="GridContainer"]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
texture_normal = ExtResource( 11 )

[node name="B2Button" type="TextureButton" parent="GridContainer"]
margin_left = 54.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 158.0
texture_normal = ExtResource( 14 )

[node name="BackButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 13.1569
margin_top = -54.6167
margin_right = 113.157
margin_bottom = -4.61673
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectTitle" type="Sprite" parent="."]
position = Vector2( 158.171, 25.9513 )
texture = ExtResource( 5 )
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
